# ADK_MCP_A2A

./: .gitignore  README.md
financial_advisor_management/: README.md  pyproject.toml
financial_advisor_management/financial-advisor/: agent.py  prompt.py
financial_advisor_management/financial-advisor/sub_agents/data_analyst/: agent.py  prompt.py
financial_advisor_management/financial-advisor/sub_agents/execution_analyst/: __init__.py  agent.py
financial_advisor_management/financial-advisor/sub_agents/risk_analyst/: __init__.py  agent.py
financial_advisor_management/financial-advisor/sub_agents/trading_analyst/: __init__.py  agent.py
financial_advisor_management/financial_advisor/: __init__.py  a2a_protocol.py  agent.py
financial_advisor_management/financial_advisor/simple-mcp-server/: mcp_server.py
financial_advisor_management/financial_advisor/sub_agents/data_analyst/: __init__.py  agent.py  prompt.py
financial_advisor_management/financial_advisor/sub_agents/execution_analyst/: __init__.py  agent.py  prompt.py
financial_advisor_management/financial_advisor/sub_agents/risk_analyst/: __init__.py  agent.py  prompt.py
financial_advisor_management/myenv4/: pyvenv.cfg
financial_advisor_management/myenv4/Scripts/: activate  activate.bat  fixup_admin_v2_keywords.py  fixup_bigtable_v2_keywords.py
financial_advisor_management/simple-mcp-server/: mcp_server.py
financial_advisor_management/venv1/: pyvenv.cfg
financial_advisor_management/venv1/Scripts/: activate  activate.bat  fixup_admin_v2_keywords.py  fixup_bigtable_v2_keywords.py
myenv2/: pyvenv.cfg
(+56 files in other folders)
